@@ -1,0 +1,14 @@
+<html>
+	<head>
+		<title>array sample</title>
+	</head>
+	<body>
+		<?php echo wudimei_toString( @$this->data['name']); ?>
+		
+		
+		
+		
+		<?php echo wudimei_toString( @$this->data['name']); ?>
+		
+	</body>
+</html>
