@@ -1,0 +1,5 @@
+Hi,<?php echo wudimei_toString( @$this->data['username']); ?>!<br />
+welcome to sign up wudimei.com!<br />
+your password is:<br />
+<?php echo wudimei_toString( @$this->data['password']); ?> <br />
+<?php echo wudimei_toString( @$this->data['wudimei']['now']); ?>
