@@ -1,0 +1,11 @@
+<html>
+	<head>
+		<title>include sample</title>
+	</head>
+	<body>
+		<?php echo $this->fetch("inc/top.html", $this->data ); ?>
+		<div>
+			<?php echo wudimei_toString( @$this->data['welcome']); ?>
+		</div>
+	</body>
+</html>
