@@ -1,0 +1,1 @@
+<h1><?php echo wudimei_toString( @$this->data['site_name']); ?></h1>
