@@ -1,0 +1,18 @@
+<html>
+	<head>
+		<title>array sample</title>
+	</head>
+	<body>
+		{$name}
+		
+		{* this is comment,will not be output by wudimei template engine *}
+		{* 
+			this is the multiple line comment,
+			will not be output by wudimei template engine
+			{$name} in here will not be outputed.
+		*}
+		
+		{$name}
+		
+	</body>
+</html>
