@@ -1,0 +1,5 @@
+Hi,{$username}!<br />
+welcome to sign up wudimei.com!<br />
+your password is:<br />
+{$password} <br />
+{$wudimei.now}
