@@ -1,0 +1,11 @@
+<html>
+	<head>
+		<title>include sample</title>
+	</head>
+	<body>
+		{include file="inc/top.html"}
+		<div>
+			{$welcome}
+		</div>
+	</body>
+</html>
