@@ -1,0 +1,1 @@
+<h1>{$site_name}</h1>
