@@ -1,3 +1,4 @@
+2014-01-04 修改了wudimei模板引擎的系统变量{$wudimei.session.username}引用的问题。
 2014-01-02 修改了 wudime模板引擎fetch里$rong_view_data的错误 
 
 2013-04-07 enable $this->view->set("varname",$var); for class Rong_View_PHP;
